--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -1,3 +1,15 @@
+body
+    margin: 0
+    padding: 0
+    width: 100vw
+    height: 100vh
+    box-sizing: border-box
+    overflow-x: hidden
+
+#root
+    width: 100%
+    height: 100%
+
 a
     color: var(--primary-color-text)
     text-decoration: none
