--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -1,14 +1,13 @@
 body
     margin: 0
     padding: 0
-    width: 100vw
-    height: 100vh
-    box-sizing: border-box
-    overflow-x: hidden
+    left: 0
+    right: 0
+    min-height: 100vh
 
 #root
-    width: 100%
-    height: 100%
+    min-width: 100%
+    max-width: 100%
 
 a
     color: var(--primary-color-text)
