--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -34,17 +34,21 @@ a
 
         >.p-menuitem, >.p-menuitem-active
             color: var(--primary-color-text) !important
-            background-color: var(--primary-color) !important
 
             &a
-                background-color: var(--primary-color) !important
+                background-color: var(--blue-600) !important
+                // background-color: var(--primary-color) !important
+                border-color: var(--blue-600) !important
 
             >.p-menuitem-link
                 color: var(--primary-color-text) !important
                 background-color: var(--primary-color) !important
+                box-shadow: none
 
                 &:hover, &:focus, &:active
-                    background-color: var(--primary-color) !important
+                    // background-color: var(--primary-color) !important
+                    background-color: var(--blue-600) !important
+                    border-color: var(--blue-600) !important
 
                 >.p-menuitem-icon, >.p-menuitem-text, >.p-submenu-icon
                     color: var(--primary-color-text) !important
