--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -1,9 +1,16 @@
+html
+    height: 100%
+    width: 100%
+    display: flex
+
 body
     margin: 0
     padding: 0
     left: 0
     right: 0
-    min-height: 100vh
+    width: 100%
+    flex-grow: 1
+    display: flex
 
 #root
     min-width: 100%
